k8s/app/thesis-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: thesis-clip
spec:
  type: ClusterIP
  selector:
    component: thesis
  ports:
    - port: 8080
      targetPort: 3000
      name: thesis
      protocol: TCP
