k8s/app/thesis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thesis-ingress
spec:
  rules:
  - host: "thesis.new.hua.gr"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: thesis-clip
            port:
              number: 8080
  - host: "ldap.thesis.new.hua.gr"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: thesis-ldap-clip
            port:
              number: 8080
  - host: "mailhog.thesis.new.hua.gr"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: mailhog-clip
              port:
                number: 8025
